--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.1",
     "description": "Simple Video Call",
     "dependencies": {
-      "node-static": "^0.7.10",
-      "socket.io": "^1.2.0"
+        "node-static": "^0.7.10",
+        "websocket": "^1.0.34",
+        "ws": "^8.6.0"
     }
-  }
+}
